[package]
name = "git"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
git2 = "0.15.0"
lazy_static = "1.4.0"
markdown = "0.3.0"
rocket = "0.5.0-rc"
rocket_dyn_templates = {version = "0.1.0-rc.2", features=["handlebars"]}
serde = "1.0.145"
serde_derive = "1.0.145"
toml = "0.5.9"
