[package]
name = "selfhut"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
chrono-humanize = "0.2.2"
dirs = "4.0.0"
emojicons = "1.0.1"
git2 = "0.15.0"
humansize = "2.0.0"
lazy_static = "1.4.0"
pulldown-cmark = "0.9.2"
rocket = "0.5.0-rc"
rocket_dyn_templates = {version = "0.1.0-rc.2", features=["handlebars"]}
serde = "1.0.145"
serde_derive = "1.0.145"
syntect = "5.0.0"
tar = "0.4.38"
toml = "0.5.9"
unix_mode = "0.1.3"
